
# Changes

## Releases from [chrisant996/clink](https://github.com/chrisant996/clink) fork

### v1.1.15

- Fixed saving color settings to behave like other settings: only write a setting's value to the setting file if it differs from the default value.

### v1.1.14

- Migrate settings and history from an old version of Clink, if present.  This only happens if the new-version Clink settings or history files don't exist.  (Deleting an existing new-version Clink settings or history file will cause migration to happen again.)
- Added `color.prompt` setting for backward compatibility with Clink v0.4.x.

### v1.1.13

- Fixed `clink.arg.register_parser` backward compatibility.

### v1.1.12

- Added `clink.ondisplaymatches()` as a replacement for the deprecated `clink.match_display_filter`.  The new API is able to support popup list windows as well.
- Speculative possible fix for [#35](https://github.com/chrisant996/clink/issues/35) Crash when clink on clink.bat.
- Fixed [#33](https://github.com/chrisant996/clink/issues/33) Tab autocomplete, auto-quoting paths doesn't seem to work as in Clink 0.4.9.

### v1.1.11

- Changed to load Lua scripts only once per session, unless forced to reload them.  This enables backward compatibility for things like [z.lua](https://github.com/skywind3000/z.lua) which has certain features that rely on Clink only loading scripts once per session.
- Added `clink.onbeginedit()` so scripts can register a callback function to be called each time the edit prompt is activated.
- Added `lua.reload_scripts` setting to optionally force reloading Lua scripts each time the edit prompt is activated.
- Added `color.message` setting for the Readline message area color (e.g. the search prompt message or digit argument prompt message, etc).
- Fixed stray sticky `=` appended to completions after typing `set ` and then typing a different command.

### v1.1.10

- Fixed [#32](https://github.com/chrisant996/clink/issues/32) hooking `ReadConsoleW` on Windows 7.
